force-app/main/default/objects/Technician__c/fields/Home_Region__c.field-meta.xml
<CustomField>
    <fullName>Home_Region__c</fullName>
    <label>Home Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>