force-app/main/default/objects/Technician__c/fields/Is_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>Is_Premium_Rate__c</fullName>
    <formula>Hourly_Rate__c &gt; 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Premium Rate</label>
    <type>Checkbox</type>
</CustomField>